fix issue #15: map no longer scrolls off screen

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -124,6 +124,7 @@ main {
 @media(min-width: 768px) {
 
   #map-canvas {
+    position: fixed;
     height: 100%;
     width: 70%;
     top: 0;
@@ -148,6 +149,7 @@ main {
   }
 
   header {
+    position: fixed;
     h1 {
       border-radius: $border-radius;
     }
